<resources>
    <string name="app_name">Quest</string>
    <string name="Yes">ДА</string>
    <string name="No">Нет</string>
    <string name="question_android">OC Android основана на ядре Linux.</string>
    <string name="question_linear">Разметка LinearLayout позиционирует свои дочерние элементы в строки и столбцы.</string>
    <string name="question_service">Компонент Android-приложения service предоставляет доступ к данным.</string>
    <string name="question_res">Ресурсы приложения содержатся в отдельном файле XML.</string>
    <string name="question_manifest">AndroidManifest.xml предоставляет системе основную информацию о программе.</string>
    <string name="True">Верно!</string>
    <string name="False">Неверно!</string>
    <string name="Next">Далее</string>
    <string name="Back">Назад</string>
    <string name="Are_you_sure">Вы уверены что хотите это сделать?</string>
    <string name="Show_answer">ПОКАЗАТЬ ОТВЕТ</string>
    <string name="deceit_button">Обмануть!</string>
    <string name="deceit_toast">Обманывать нельзя.</string>
    <string name="Warning">Предупреждение</string>
</resources>
